# deal-intelligence-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/chunks/AAPL/10-K/: 2023-11-03_0000320193_23_000106.chunks.jsonl  2024-11-01_0000320193_24_000123.chunks.jsonl  2025-10-31_0000320193_25_000079.chunks.jsonl
data/chunks/MSFT/10-K/: 2023-07-27_0000950170_23_035122.chunks.jsonl  2024-07-30_0000950170_24_087843.chunks.jsonl  2025-07-30_0000950170_25_100235.chunks.jsonl
data/processed/AAPL/10-K/: 2023-11-03_0000320193_23_000106.parsed.json  2024-11-01_0000320193_24_000123.parsed.json  2025-10-31_0000320193_25_000079.parsed.json
data/processed/MSFT/10-K/: 2023-07-27_0000950170_23_035122.parsed.json  2024-07-30_0000950170_24_087843.parsed.json  2025-07-30_0000950170_25_100235.parsed.json
data/raw/filings/AAPL/10-K/: 2023-11-03_0000320193_23_000106.meta.json  2024-11-01_0000320193_24_000123.meta.json  2025-10-31_0000320193_25_000079.meta.json
data/raw/filings/MSFT/10-K/: 2023-07-27_0000950170_23_035122.meta.json  2024-07-30_0000950170_24_087843.meta.json  2025-07-30_0000950170_25_100235.meta.json
docs/: design_decisions.md
frontend/: index.html
src/deal_intelligence_rag/agent/: agent_loop.py  judge.py  tools.py
src/deal_intelligence_rag/api/: main.py  middleware.py  routes.py  state.py
src/deal_intelligence_rag/ingestion/: chunker.py  edgar_downloader.py  pdf_parser.py
src/deal_intelligence_rag/query/: confidence.py  decomposer.py  multi_hop_chain.py  output_schema.py
src/deal_intelligence_rag/retrieval/: bm25_retriever.py  embedder.py  fusion.py  reranker.py  vector_store.py
